# repro_pydantic_7280

./: README.md  mypy.ini  pydantic_hmm.py  pyproject.toml
